Use price precision setting on investment prices report

BUG: 294268

Differential Revision: https://phabricator.kde.org/D4656

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>